# gwca_project_template

./: .gitignore  CMakeLists.txt
src/: dllmain.cpp
